Fix reply header being visible when selecting or replying in unjoined chat

--- a/src/scss/partials/_chat.scss
+++ b/src/scss/partials/_chat.scss
@@ -446,7 +446,7 @@ $time-margin-left: math.div($message-padding-horizontal, -2) + 1px;
 
         .reply-wrapper {
           height: 0 !important;
-          opacity: 0;
+          opacity: 0 !important;
           pointer-events: none;
         }
 
